GNOME Bugzilla – Bug 658416
decodebin2: refcounting bugs causing criticals
Last modified: 2011-09-07 11:35:44 UTC
Very recent, reminder for me to bisect tomorrow. $ gst-launch filesrc location=$TESTFILE ! decodebin2 Setting pipeline to PAUSED ... Pipeline is PREROLLING ... (gst-launch-0.10:24853): GStreamer-CRITICAL **: Trying to dispose object "legacympegvideoparse", but it still has a parent "registry0". You need to let the parent manage the object instead of unreffing the object directly. Pipeline is PREROLLED ... Setting pipeline to PLAYING ... New clock: GstSystemClock [...]
Seems to be fixed now, please confirm
commit f93748fbd496953409b8e0815ac6a27b2ad5367c Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Wed Sep 7 12:32:01 2011 +0100 decodebin2: fix element factory refcounting g_value_get_object() does not give us our own ref. Fixes "Trying to dispose object "flacparse", but it still has a parent "registry0". You need to let the parent manage the object instead of unreffing the object directly." and similar warnings. https://bugzilla.gnome.org/show_bug.cgi?id=658416 ============== > Trying to dispose object "legacympegvideoparse", but it still has a parent PS: why is legacyxyzparse autoplugged I wonder... shouldn't it be legacy? ;)